Bug #1556 - Top Nav, Group Sites: Small issues with background and alignment

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -810,7 +810,6 @@
                 }
                 #wp-admin-bar-openlab{
                     .box-sizing(border-box);
-                    border-bottom: 1px solid #444;
                 }
                 #wp-admin-bar-top-logout{
                     .box-sizing(border-box);
